# ferron-module-example

./: Cargo.toml  README.md
.github/workflows/: compilation-test.yml  rust.yml
.shiba/: pre-commit
src/: lib.rs
